fixed padding issue on h4 span

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                 &nbsp;
                             </div>
                             <h4 class="card__heading">
-                                <span class="card__heading--span card__heading-span--1">The Sea Explorer</span>
+                                <span class="card__heading-span card__heading-span--1">The Sea Explorer</span>
                             </h4>
                             <div class="card__details">
                                 <ul>
@@ -158,7 +158,7 @@
                                 &nbsp;
                             </div>
                             <h4 class="card__heading">
-                                <span class="card__heading--span card__heading-span--2">The Forest Hiker</span>
+                                <span class="card__heading-span card__heading-span--2">The Forest Hiker</span>
                             </h4>
                             <div class="card__details">
                                 <ul>
@@ -189,7 +189,7 @@
                                 &nbsp;
                             </div>
                             <h4 class="card__heading">
-                                <span class="card__heading--span card__heading-span--3">The Snow Adventurer</span>
+                                <span class="card__heading-span card__heading-span--3">The Snow Adventurer</span>
                             </h4>
                             <div class="card__details">
                                 <ul>
