--- a/index.html
+++ b/index.html
@@ -113,7 +113,6 @@
 
         <section class="section-tours">
             <div class="u-center-text u-margin-bottom-big">
-
                 <h2 class="heading-secondary">
                     Most popular tours
                 </h2>
@@ -246,10 +245,11 @@
                     <div class="story__text">
                         <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius iusto dolor nam cum quod!
-                            Exercitationem, harum delectus sed iusto mollitia Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius iusto dolor nam cum quod!
+                            Exercitationem, harum delectus sed iusto mollitia Lorem ipsum dolor sit amet consectetur,
+                            adipisicing elit. Eius iusto dolor nam cum quod!
                             Exercitationem, harum del</p>
                     </div>
-                </div> 
+                </div>
             </div>
 
             <div class="row">
@@ -263,10 +263,11 @@
                     <div class="story__text">
                         <h3 class="heading-tertiary u-margin-bottom-small">WOW! My life is completely different now</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius iusto dolor nam cum quod!
-                            Exercitationem, harum delectus sed iusto mollitia Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius iusto dolor nam cum quod!
+                            Exercitationem, harum delectus sed iusto mollitia Lorem ipsum dolor sit amet consectetur,
+                            adipisicing elit. Eius iusto dolor nam cum quod!
                             Exercitationem, harum del</p>
                     </div>
-                </div> 
+                </div>
             </div>
 
             <div class="u-center-text u-margin-top-huge">
@@ -277,7 +278,25 @@
         <section class="section-book">
             <div class="row">
                 <div class="book">
-                    
+                    <div class="book__form">
+                        <form action="#" class="form">
+                            <div class="u-margin-bottom-medium">
+                                <h2 class="heading-secondary">
+                                    Start Booking Now
+                                </h2>
+                            </div>
+
+                            <div class="form__group">
+                                <input type="text" class="form__input" placeholder="Full Name" id="name" required>
+                                <label for="name" class="form__label">Full Name</label>
+                            </div>
+
+                            <div class="form__group">
+                                <input type="email" class="form__input" placeholder="Email Address" id="email" required>
+                                <label for="email" class="form__label">Email Address</label>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </section>
