--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
             </div>
             <div class="col-1-of-2">
                 <p class="footer__copyright">
-                    Built my <a href="#" class="footer__link">Brad Ripple</a> from Jonas Schmedtmann online course <a
+                    Built my <a href="#" class="footer__link">Brad Ripple</a> from Jonas Schmedtmann's online course <a
                         href="#" class="footer__link"> Advanced CSS and SASS </a>. Copyright &copy; by Jonas
                     Schmedtmann. You are 100% allowed both personal and commercial use, but NOT to claim it as our own
                     design.
