Completed Pt 1 of Popup Section

--- a/index.html
+++ b/index.html
@@ -379,18 +379,15 @@
                 <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
             </div>
             <div class="popup__right">
-                <h2 class="heading-secondary">Start booking now</h2>
-                <h3 class="heading-tertiary">Important &ndash; Please read these terms before booking</h3>
+                <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
                 <p class="popup__text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et dolore magna aliqua. Purus faucibus ornare suspendisse sed nisi lacus.
                     Convallis posuere morbi leo urna molestie. Id neque aliquam vestibulum morbi blandit. Vel facilisis
                     volutpat est velit egestas. Sodales ut eu sem integer vitae justo eget magna. Bibendum arcu vitae
                     elementum curabitur vitae nunc sed velit. Malesuada nunc vel risus commodo. In fermentum et
-                    sollicitudin ac orci phasellus egestas tellus. Ultricies leo integer malesuada nunc vel risus. Enim
-                    diam vulputate ut pharetra sit amet aliquam id. Proin sed libero enim sed faucibus turpis. Blandit
-                    aliquam etiam erat velit scelerisque in dictum. Sollicitudin aliquam ultrices sagittis orci a
-                    scelerisque purus. Hac habitasse platea dictumst quisque sagittis purus sit amet.
+                    sollicitudin ac orci phasellus egestas tellus. 
                 </p>
                 <a href="#" class="btn btn--green">Book now</a>
             </div>
