--- a/index.html
+++ b/index.html
@@ -347,7 +347,14 @@
 
     <footer class="footer">
         <div class="footer__logo-box">
-            <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo" class="footer__logo">
+
+            <picture class="footer__logo">
+                <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x"
+                    media="(max-width: 37.5em)">
+                <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo">
+            </picture>
+
+
         </div>
         <div class="row">
             <div class="col-1-of-2">
@@ -381,14 +388,15 @@
             <div class="popup__right">
                 <a href="#section-tours" class="popup__close">&times;</a>
                 <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
-                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before
+                    booking</h3>
                 <p class="popup__text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et dolore magna aliqua. Purus faucibus ornare suspendisse sed nisi lacus.
                     Convallis posuere morbi leo urna molestie. Id neque aliquam vestibulum morbi blandit. Vel facilisis
                     volutpat est velit egestas. Sodales ut eu sem integer vitae justo eget magna. Bibendum arcu vitae
                     elementum curabitur vitae nunc sed velit. Malesuada nunc vel risus commodo. In fermentum et
-                    sollicitudin ac orci phasellus egestas tellus. 
+                    sollicitudin ac orci phasellus egestas tellus.
                 </p>
                 <a href="#" class="btn btn--green">Book now</a>
             </div>
